--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Hey CodeWars Parts One</h1>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
